# yuchengImGUI

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  compile.bat  compile.sh  ecompile.bat  ecompile.sh  imgui.ini
.sisyphus/: boulder.json
.sisyphus/drafts/: dc-ui-layout-optimization.md
.sisyphus/notepads/dual-contouring-learning/: learnings.md
.sisyphus/notepads/task-10-add-shape/: learnings.md
.sisyphus/plans/: dc-ui-layout-optimization.md  dual-contouring-learning.md  imgui-ui-bugfix.md
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/_static/: documentation_options.js
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_pkg_config.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  (+89 more)
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_DIR.html  CMAKE_CONFIG_TYPE.html  CMAKE_CROSSCOMPILING_EMULATOR.html  CMAKE_EXPORT_BUILD_DATABASE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FRAMEWORK_PATH.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INCLUDE_PATH.html  CMAKE_INSTALL_MODE.html  CMAKE_INSTALL_PARALLEL_LEVEL.html  CMAKE_INSTALL_PREFIX.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_LIBRARY_PATH.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_PREFIX_PATH.html  CMAKE_PROGRAM_PATH.html  CMAKE_TEST_LAUNCHER.html  CMAKE_TLS_VERIFY.html  CMAKE_TLS_VERSION.html  CMAKE_TOOLCHAIN_FILE.html  (+35 more)
3rdlibs/cmake-3.31.4-windows-x86_64/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 17 2022.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Visual Studio 8 2005.html  Visual Studio 9 2008.html  Watcom WMake.html  Xcode.html
3rdlibs/cmake-3.31.4-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
3rdlibs/cmake-3.31.4-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
backends/: AGENTS.md
cmake/: InstallLib.cmake  imguiConfig.cmake.in
demo/: CMakeLists.txt
demo/dual_contouring/: CMakeLists.txt  README.md  dc_app.cpp  dc_app.h  dc_contouring.cpp  dc_contouring.h  dc_hermite.cpp  dc_hermite.h  dc_mesh.cpp  dc_mesh.h  dc_qef.cpp  dc_qef.h  dc_quadtree.cpp  dc_quadtree.h  dc_renderer.cpp  dc_renderer.h  dc_sdf.cpp  dc_sdf.h  main.cpp
demo/opengl/: CMakeLists.txt  main.cpp
demo/vulkan/: CMakeLists.txt  main.cpp
examples/: AGENTS.md
(+1840 files in other folders)
